--- a/tsconfig.shared.json
+++ b/tsconfig.shared.json
@@ -19,7 +19,7 @@
     "skipLibCheck": true,
     "verbatimModuleSyntax": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": false,
+    "allowSyntheticDefaultImports": true,
     "strictFunctionTypes": true,
     "forceConsistentCasingInFileNames": true
   }
